testdata/baselines/reference/submodule/compiler/jsFileCompilationModuleSyntax.errors.txt
a.js(1,1): error TS8006: 'module' declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    module M { }
    ~~~~~~~~~~~~
!!! error TS8006: 'module' declarations can only be used in TypeScript files.